# runtrace

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
assets/: README.md
docs/: CLI.md  CONFIG.md  GITHUB.md  PYPI.md  RELEASE.md  REPORTS.md
examples/: README.md
examples/sample-output/: report.html  report.md
scripts/: smoke.sh
src/runtrace/: __init__.py  __main__.py  cli.py  config.py  git_utils.py  main.py  models.py  paths.py  recorder.py  reports.py  review.py  runner.py  sanitizer.py
src/runtrace/templates/: index.html.j2  report.html.j2
tests/: test_cli.py  test_doctor.py  test_git_utils.py  test_open_workflow.py  test_pr_summary.py  test_reports.py  test_review.py  test_runner.py  test_sanitizer.py  test_simple_aliases.py  test_v02_features.py
