[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "runtrace"
version = "0.3.0"
description = "A black box for AI coding agents."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "Runtrace contributors"}]
keywords = ["cli", "ai-agents", "developer-tools", "git", "reports"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Version Control :: Git",
  "Topic :: Utilities",
]
dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0",
  "pydantic>=2.6.0",
  "jinja2>=3.1.0",
]

[project.urls]
Homepage = "https://github.com/husi0x/runtrace"
Repository = "https://github.com/husi0x/runtrace"
Issues = "https://github.com/husi0x/runtrace/issues"

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.5.0", "build>=1.2.0", "twine>=5.0.0"]

[project.scripts]
runtrace = "runtrace.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/runtrace"]

[tool.hatch.build.targets.wheel.force-include]
"src/runtrace/templates/report.html.j2" = "runtrace/templates/report.html.j2"
"src/runtrace/templates/index.html.j2" = "runtrace/templates/index.html.j2"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
